@@ -60,7 +60,6 @@
 #include "_scm.h"
 #include "print.h"
 #include "smob.h"
-#include "genio.h"
 
 #include "validate.h"
 #include "guardians.h"
