@@ -78,7 +78,6 @@ extern "C" {
 #include "libguile/fports.h"
 #include "libguile/gc.h"
 #include "libguile/gdbint.h"
-#include "libguile/genio.h"
 #include "libguile/gsubr.h"
 #include "libguile/guardians.h"
 #include "libguile/hash.h"
