@@ -50,7 +50,6 @@
 #include <stdio.h>
 #include "_scm.h"
 #include "smob.h"
-#include "genio.h"
 #include "alist.h"
 #include "debug.h"
 #include "hashtab.h"
