@@ -67,7 +67,6 @@
 #include "_scm.h"
 #include "dynwind.h"
 #include "smob.h"
-#include "genio.h"
 
 #include "threads.h"
 
